deploy/retrieveUnpackaged/objects/Support_Escalation__c.object
<CustomObject>
    <description>Document / Track Progress During Escalation</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Support Escalations</relationshipLabel>
        <relationshipName>Support_Escalations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Action_Item_1__c</fullName>
        <label>Action Item 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_Item_2__c</fullName>
        <label>Action Item 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Action_Item_3__c</fullName>
        <label>Action Item 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_Owner_1__c</fullName>
        <inlineHelpText>Who will own this action item</inlineHelpText>
        <label>Action Owner 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Support_Escalations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Owner_2__c</fullName>
        <inlineHelpText>Who will own this action item?</inlineHelpText>
        <label>Action Owner 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Support_Escalations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Owner_3__c</fullName>
        <inlineHelpText>Who will own this action item?</inlineHelpText>
        <label>Action Owner 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Support_Escalations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Required_from_Sr_Leader__c</fullName>
        <label>Action Required from Sr. Leader</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brief_Description__c</fullName>
        <label>Brief Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completion_Date_1__c</fullName>
        <label>Completion Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_Date_2__c</fullName>
        <label>Completion Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_Date_3__c</fullName>
        <label>Completion Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Memo_Details__c</fullName>
        <label>Credit Memo Details</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Action_Items__c</fullName>
        <inlineHelpText>Identify Action Owner &amp; Completion Date</inlineHelpText>
        <label>Customer Action Items</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Irritant_Objective__c</fullName>
        <label>Customer Irritant/Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_s_Preferred_Contact_Method_Info__c</fullName>
        <label>Customer&apos;s Preferred Contact Method/Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Final_Remediation_Plans__c</fullName>
        <label>Final Remediation Plans</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incident_Date__c</fullName>
        <label>Incident Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Incident_Level__c</fullName>
        <label>Incident Level</label>
        <picklist>
            <picklistValues>
                <fullName>Stage 1 - Leadership Involvement Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 2 - Threatening to Leave Rackspace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 3 - Threatening Litigation for Damages</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incident_Report_Status__c</fullName>
        <label>Incident Report Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete - Submitted to Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Leadership_Level__c</fullName>
        <label>Leadership Level</label>
        <picklist>
            <picklistValues>
                <fullName>Team Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Leadership_Owner__c</fullName>
        <label>Leadership Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Support_Escalations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_s_of_Customer_s_Involved__c</fullName>
        <label>Name(s) of Customer(s) Involved</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommended_Remediation_Plan__c</fullName>
        <label>Recommended Remediation Plan</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Leadership Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Customer Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Was_the_Incident_Customer_Impacting__c</fullName>
        <label>Was the Incident Customer Impacting?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_s_Been_Done_To_Resolve_Thus_Far__c</fullName>
        <label>What&apos;s Been Done To Resolve Thus Far</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Support Escalation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>Brief_Description__c</columns>
        <columns>Incident_Date__c</columns>
        <columns>Incident_Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Support Escalation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Support Escalations</pluralLabel>
    <recordTypes>
        <fullName>Support_Escalation</fullName>
        <active>true</active>
        <label>Support Escalation</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>